--- a/wibb-ws/package.json
+++ b/wibb-ws/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.8.9"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
