--- a/wibb-android/app/build.gradle
+++ b/wibb-android/app/build.gradle
@@ -32,6 +32,12 @@ dependencies {
     implementation 'com.shuhart.stepview:stepview:1.5.0'
     implementation 'com.github.Triggertrap:SeekArc:1.1'
 
+    implementation 'com.android.volley:volley:1.1.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
