--- a/wibb-android/app/build.gradle
+++ b/wibb-android/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation 'com.shuhart.stepview:stepview:1.5.0'
     implementation 'com.github.Triggertrap:SeekArc:1.1'
+    implementation 'com.archit.calendar:awesome-calendar:1.1.5'
 
     implementation 'com.android.volley:volley:1.1.1'
 
