--- a/wibb-android/app/build.gradle
+++ b/wibb-android/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0-alpha05'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     testImplementation 'junit:junit:4.12'
