--- a/wibb-android/app/build.gradle
+++ b/wibb-android/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.wibb"
+        applicationId "com.spogss.wibb"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
