--- a/wibb-android/app/src/main/AndroidManifest.xml
+++ b/wibb-android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wibb">
+    package="com.spogss.wibb">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,36 +12,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RequestNewContentActivity"
-            android:parentActivityName=".SettingsActivity">
+        <activity android:name="com.spogss.wibb.RequestNewContentActivity"
+            android:parentActivityName="com.spogss.wibb.SettingsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.wibb.SettingsActivity" />
+                android:value="com.spogss.wibb.SettingsActivity" />
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.spogss.wibb.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName="com.spogss.wibb.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.wibb.MainActivity" />
+                android:value="com.spogss.wibb.MainActivity" />
         </activity>
-        <activity android:name=".SplashActivity">
+        <activity android:name="com.spogss.wibb.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.spogss.wibb.MainActivity" />
         <activity
-            android:name=".AddOfferActivity"
-            android:parentActivityName=".MainActivity">
+            android:name="com.spogss.wibb.AddOfferActivity"
+            android:parentActivityName="com.spogss.wibb.MainActivity">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.wibb.MainActivity" />
+                android:value="com.spogss.wibb.MainActivity" />
         </activity>
     </application>
 
