--- a/wibb-ws/package.json
+++ b/wibb-ws/package.json
@@ -1,21 +1,25 @@
 {
   "name": "wibb-ws",
   "version": "1.0.0",
-  "description": "wibb webservice",
-  "main": "start.js",
+  "description": "",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "tsc && node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tslint -p tsconfig.json"
   },
-  "author": "Paul Mühlbacher & Samuel Fahrngruber",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.9.7",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/register": "^7.6.2"
+    "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.10",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
   }
 }
