--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 
-# Created by https://www.gitignore.io/api/node,java,gradle,kotlin,android,angular,androidstudio
-# Edit at https://www.gitignore.io/?templates=node,java,gradle,kotlin,android,angular,androidstudio
+# Created by https://www.toptal.com/developers/gitignore/api/node,java,gradle,kotlin,android,androidstudio,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,java,gradle,kotlin,android,androidstudio,visualstudiocode
 
 ### Android ###
 # Built application files
 *.apk
+*.aar
 *.ap_
 *.aab
 
@@ -18,7 +19,8 @@
 bin/
 gen/
 out/
-release/
+#  Uncomment the following line in case you need and you don't have the release build type files in your app
+# release/
 
 # Gradle files
 .gradle/
@@ -60,6 +62,7 @@ captures/
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+.cxx/
 
 # Google Services (e.g. APIs or Firebase)
 # google-services.json
@@ -92,38 +95,6 @@ output.json
 
 # Replacement of .externalNativeBuild directories introduced
 # with Android Studio 3.5.
-.cxx/
-
-### Angular ###
-## Angular ##
-# compiled output
-dist/
-tmp/
-app/**/*.js
-app/**/*.js.map
-
-# dependencies
-node_modules/
-bower_components/
-
-# IDEs and editors
-.idea/
-
-# misc
-.sass-cache/
-connect.lock/
-coverage/
-libpeerconnection.log/
-npm-debug.log
-testem.log
-typings/
-
-# e2e
-e2e/*.js
-e2e/*.map
-
-#System Files
-.DS_Store/
 
 ### Java ###
 # Compiled class file
@@ -201,9 +172,11 @@ bower_components
 build/Release
 
 # Dependency directories
+node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
+typings/
 
 # TypeScript cache
 *.tsbuildinfo
@@ -213,6 +186,15 @@ jspm_packages/
 
 # Optional eslint cache
 .eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
 
 # Optional REPL history
 .node_repl_history
@@ -226,26 +208,32 @@ jspm_packages/
 # dotenv environment variables file
 .env
 .env.test
+.env*.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+.parcel-cache
 
-# next.js build output
+# Next.js build output
 .next
 
-# nuxt.js build output
+# Nuxt.js build / generate output
 .nuxt
-
-# rollup.js default build output
-
-# Uncomment the public line if your project uses Gatsby
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# https://create-react-app.dev/docs/using-the-public-folder/#docsNav
-# public
+dist
 
 # Storybook build outputs
 .out
 .storybook-out
+storybook-static
+
+# rollup.js default build output
+dist/
+
+# Gatsby files
+.cache/
+# Comment in the public line in if your project uses Gatsby and not Next.js
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# public
 
 # vuepress build output
 .vuepress/dist
@@ -259,8 +247,26 @@ jspm_packages/
 # DynamoDB Local files
 .dynamodb/
 
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
 # Temporary folders
+tmp/
 temp/
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 
 ### Gradle ###
 .gradle
@@ -312,6 +318,13 @@ gradle-app.setting
 *~
 *.swp
 
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+# google-services.json
+
 # Android Patch
 
 # External native build folder generated in Android Studio 2.2 and later
@@ -340,6 +353,7 @@ obj/
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
+.idea/jarRepositories.xml
 
 # OS-specific files
 .DS_Store
@@ -383,4 +397,4 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.gitignore.io/api/node,java,gradle,kotlin,android,angular,androidstudio
+# End of https://www.toptal.com/developers/gitignore/api/node,java,gradle,kotlin,android,androidstudio,visualstudiocode
