--- a/wibb-android/app/src/main/AndroidManifest.xml
+++ b/wibb-android/app/src/main/AndroidManifest.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.spogss.wibb">
+        package="com.spogss.wibb">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".FavouritePreferences"></activity>
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name=".RequestNewContentActivity"
-            android:parentActivityName=".SettingsActivity">
+                android:name=".RequestNewContentActivity"
+                android:parentActivityName=".SettingsActivity">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.spogss.wibb.SettingsActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.spogss.wibb.SettingsActivity" />
         </activity>
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
+                android:name=".SettingsActivity"
+                android:label="@string/title_activity_settings"
+                android:parentActivityName=".MainActivity">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.spogss.wibb.MainActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.spogss.wibb.MainActivity" />
         </activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -37,16 +37,20 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity
-            android:name=".AddOfferActivity"
-            android:parentActivityName=".MainActivity">
+                android:name=".AddOfferActivity"
+                android:parentActivityName=".MainActivity">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.spogss.wibb.MainActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.spogss.wibb.MainActivity" />
         </activity>
-        <activity android:name=".FavouriteStorePreferences" android:parentActivityName=".SettingsActivity" />
-        <activity android:name=".FavouriteBeerPreferences" android:parentActivityName=".SettingsActivity" />
+        <activity
+                android:name=".FavouriteStorePreferences"
+                android:parentActivityName=".SettingsActivity" />
+        <activity
+                android:name=".FavouriteBeerPreferences"
+                android:parentActivityName=".SettingsActivity" />
     </application>
 
 </manifest>
