--- a/wibb-android/app/build.gradle
+++ b/wibb-android/app/build.gradle
@@ -46,6 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.4.31'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.4.+'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
