--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Publish server jar to GitHub Packages
 on:
-  release:
-    types: [created]
+  push:
+
 jobs:
   publish:
     runs-on: ubuntu-latest 
