--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Publish package
+        working-directory: ./wibb-ws-j
         run: ./gradlew publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
