--- a/wibb-android/app/build.gradle
+++ b/wibb-android/app/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.spogss.wibb"
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 10
         versionName "1.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -46,6 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.4.+'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.4.32'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
