--- a/wibb-android/app/src/main/AndroidManifest.xml
+++ b/wibb-android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity
                 android:name=".SettingsActivity"
-                android:label="@string/title_activity_settings"
+                android:label="@string/settings_title"
                 android:parentActivityName=".MainActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
