--- a/wibb-ws/package.json
+++ b/wibb-ws/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.10",
     "tslint": "^6.1.1",
