feat(server): implement filtering via query params

--- a/wibb-ws-j/build.gradle
+++ b/wibb-ws-j/build.gradle
@@ -52,6 +52,7 @@ tasks.register('grabAngularApp', Exec) {
 	}
 
 	it.workingDir("../wibb-angular")
+	it.commandLine(npm, "install")
 	it.commandLine(npm, "run", "build-for-ws-j")
 }
 
