feat(server): fix ng bundling, gh actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: chmod +x ./gradlew
       - name: Publish package
         working-directory: ./wibb-ws-j
-        run: ./gradlew publish
+        run: ./gradlew publish --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create release
