feat(ci): update ci script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,15 @@ jobs:
       - name: Running checks
         working-directory: ./wibb-ws-j
         run: ./gradlew check --stacktrace
-      - name: Creating git version tag
+      - name: Calculating new version
+        id: new_version_string
         working-directory: ./wibb-ws-j
-        run: ./gradlew printVersion | grep wibb-v\d*\.\d*\.\d*-\d* | xargs git tag
-      - name: Pushing tags
-        working-directory: ./wibb-ws-jar
-        run: git push --tags
+        run: WIBB_VERSION=`./gradlew printVersion | grep wibb-v\d*\.\d*\.\d*-\d*`
+      - name: Tag snapshot
+        uses: tvdias/github-tagger@v0.0.1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ WIBB_VERSION }}
       - name: Publish package
         working-directory: ./wibb-ws-j
         run: ./gradlew publish --stacktrace
