feat(ci): try fixing gh actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Tag snapshot
         uses: tvdias/github-tagger@v0.0.1
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.new_version_string.output.WIBB_VERSION_TAG }}
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          tag: "${{ steps.new_version_string.output.WIBB_VERSION_TAG }}"
       - name: Publish package
         working-directory: ./wibb-ws-j
         run: ./gradlew publish --stacktrace
