--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Calculating new version
         id: new_version_string
         working-directory: ./wibb-ws-j
-        run: echo "::set-output name=WIBB_VERSION_TAG::$(./gradlew printVersion | grep wibb-v\d*\.\d*\.\d*-\d*)"
+        run: echo "::set-output name=WIBB_VERSION_TAG::$(./gradlew printVersion | grep wibb-v*)"
       - name: print version
         working-directory: ./wibb-ws-j
         run: echo ${{ steps.new_version_string.output.WIBB_VERSION_TAG }}
