fix(ci): set gradle output to verbose

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    env:
+        org.gradle.console: verbose
 
     steps:
       - uses: actions/checkout@v2
